@@ -6,14 +6,10 @@ import com.example.vehiclegestion.vendeur.model.Article;
 import java.sql.*;
 import java.util.ArrayList;
 import java.util.List;
-import java.io.File;
-import java.net.URL;
-import java.sql.SQLException;
-import java.util.ResourceBundle;
-import java.io.File;
-import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.nio.file.Path;
+import java.io.IOException;
 
 public class ArticleDAO {
 
@@ -27,15 +23,43 @@ public class ArticleDAO {
         }
     }
 
-    // Récupérer tous les articles d’un vendeur
-    public List<Article> getArticlesByVendeur(int vendeurId) throws SQLException {
+    public List<Article> getArticlesByVendeur(int utilisateurId) throws SQLException {
+        System.out.println("\n🔍 === ArticleDAO.getArticlesByVendeur ===");
+        System.out.println("   - Utilisateur ID reçu: " + utilisateurId);
+
+        // ✅ CORRECTION : Récupérer id_vendeur depuis la table Vendeur
+        int vendeurId = 0;
+        String getVendeurId = "SELECT id_vendeur FROM Vendeur WHERE id_vendeur = ?";
+
+        try (PreparedStatement ps = connection.prepareStatement(getVendeurId)) {
+            ps.setInt(1, utilisateurId);
+            try (ResultSet rs = ps.executeQuery()) {
+                if (rs.next()) {
+                    vendeurId = rs.getInt("id_vendeur");
+                    System.out.println("   ✅ ID Vendeur trouvé: " + vendeurId);
+                } else {
+                    System.err.println("   ❌ Aucun vendeur trouvé avec id_vendeur = " + utilisateurId);
+                    System.err.println("   ⚠️ Cet utilisateur n'existe pas dans la table Vendeur");
+                    return new ArrayList<>();
+                }
+            }
+        }
+
         List<Article> articles = new ArrayList<>();
-        String query = "SELECT * FROM Article WHERE id_vendeur = ?";
+        String query = "SELECT * FROM Article WHERE id_vendeur = ? ORDER BY date_ajout DESC";
+
+        System.out.println("   - Requête SQL: " + query);
+        System.out.println("   - Recherche pour id_vendeur: " + vendeurId);
 
         try (PreparedStatement stmt = connection.prepareStatement(query)) {
             stmt.setInt(1, vendeurId);
+
+            System.out.println("   - Exécution de la requête...");
+
             try (ResultSet rs = stmt.executeQuery()) {
+                int count = 0;
                 while (rs.next()) {
+                    count++;
                     Article article = new Article(
                             rs.getInt("id_article"),
                             rs.getString("titre"),
@@ -56,22 +80,66 @@ public class ArticleDAO {
                             rs.getInt("puissance"),
                             rs.getString("couleur")
                     );
-
                     articles.add(article);
+
+                    if (count <= 3) {
+                        System.out.println("   ✅ Article #" + count + ": " + article.getTitre() +
+                                " (ID: " + article.getId() + ", Prix: " + article.getPrix() + " DH)");
+                    }
+                }
+
+                System.out.println("   - Total articles trouvés: " + count);
+
+                if (count == 0) {
+                    System.out.println("   ⚠️ Aucun article trouvé pour ce vendeur");
+                    System.out.println("   💡 Vérifiez avec: SELECT * FROM Article WHERE id_vendeur = " + vendeurId + ";");
                 }
             }
+        } catch (SQLException e) {
+            System.err.println("   ❌ Erreur SQL: " + e.getMessage());
+            throw e;
         }
+
+        System.out.println("🔍 === Fin getArticlesByVendeur ===\n");
         return articles;
     }
 
-    // Ajouter un article/////////////////////////////////////////////////////////////
-    public boolean addArticle(Article article, int vendeurId) throws SQLException {
+
+    public boolean addArticle(Article article, int utilisateurId) throws SQLException {
+        System.out.println("\n💾 === ArticleDAO.addArticle ===");
+        System.out.println("   - Titre: " + article.getTitre());
+        System.out.println("   - Prix: " + article.getPrix() + " DH");
+        System.out.println("   - Utilisateur ID reçu: " + utilisateurId);
+
+        // ✅ CORRECTION : Récupérer id_vendeur depuis la table Vendeur
+        int vendeurId = 0;
+        String getVendeurId = "SELECT id_vendeur FROM Vendeur WHERE id_vendeur = ?";
+
+        try (PreparedStatement ps = connection.prepareStatement(getVendeurId)) {
+            ps.setInt(1, utilisateurId);
+            try (ResultSet rs = ps.executeQuery()) {
+                if (rs.next()) {
+                    vendeurId = rs.getInt("id_vendeur");
+                    System.out.println("   ✅ ID Vendeur trouvé: " + vendeurId);
+                } else {
+                    System.err.println("   ❌ ERREUR: Aucun vendeur trouvé avec id_vendeur = " + utilisateurId);
+                    System.err.println("   ⚠️ Vérifiez que l'utilisateur existe dans la table Vendeur");
+                    return false;
+                }
+            }
+        }
+
+        if (vendeurId == 0) {
+            System.err.println("   ❌ Impossible d'ajouter l'article : vendeurId invalide");
+            return false;
+        }
+
         String sql = "INSERT INTO Article " +
                 "(titre, description, prix, prix_promo, reduction, categorie, etat, image, id_vendeur, " +
                 "marque, modele, annee, kilometrage, transmission, carburant, puissance, couleur) " +
                 "VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)";
 
-        try (PreparedStatement stmt = connection.prepareStatement(sql)) {
+        try (PreparedStatement stmt = connection.prepareStatement(sql, Statement.RETURN_GENERATED_KEYS)) {
             stmt.setString(1, article.getTitre());
             stmt.setString(2, article.getDescription());
             stmt.setDouble(3, article.getPrix());
@@ -80,7 +148,7 @@ public class ArticleDAO {
             stmt.setString(6, article.getCategorie());
             stmt.setString(7, article.getEtat());
             stmt.setString(8, article.getImage());
-            stmt.setInt(9, vendeurId);
+            stmt.setInt(9, vendeurId);  // ✅ Utilise le vendeurId vérifié
             stmt.setString(10, article.getMarque());
             stmt.setString(11, article.getModele());
             stmt.setInt(12, article.getAnnee());
@@ -90,12 +158,37 @@ public class ArticleDAO {
             stmt.setInt(16, article.getPuissance());
             stmt.setString(17, article.getCouleur());
 
-            return stmt.executeUpdate() > 0;
+            System.out.println("   - Exécution de l'insertion...");
+            int rowsInserted = stmt.executeUpdate();
+
+            if (rowsInserted > 0) {
+                // Récupérer l'ID généré
+                try (ResultSet generatedKeys = stmt.getGeneratedKeys()) {
+                    if (generatedKeys.next()) {
+                        int newId = generatedKeys.getInt(1);
+                        System.out.println("   ✅ Article inséré avec succès!");
+                        System.out.println("   - ID article généré: " + newId);
+                        System.out.println("   - ID vendeur: " + vendeurId);
+                    }
+                }
+
+                System.out.println("💾 === Fin addArticle - SUCCÈS ===\n");
+                return true;
+            } else {
+                System.out.println("   ❌ Aucune ligne insérée!");
+                System.out.println("💾 === Fin addArticle - ÉCHEC ===\n");
+                return false;
+            }
+
+        } catch (SQLException e) {
+            System.err.println("   ❌ Erreur SQL: " + e.getMessage());
+            System.err.println("   - Code erreur: " + e.getErrorCode());
+            System.err.println("   - État SQL: " + e.getSQLState());
+            e.printStackTrace();
+            throw e;
         }
     }
 
-
-    // Supprimer un article/////////////////////////////////////////////////////////////////////////
     public boolean deleteArticle(int articleId) throws SQLException {
         // récupérer le chemin image
         String select = "SELECT image FROM Article WHERE id_article = ?";
@@ -112,17 +205,16 @@ public class ArticleDAO {
         try (PreparedStatement ps = connection.prepareStatement(delete)) {
             ps.setInt(1, articleId);
             boolean ok = ps.executeUpdate() > 0;
+
             if (ok && imagePath != null) {
-                // supprimer le fichier physique
-                Path p = Path.of(System.getProperty("user.dir")).resolve(imagePath);
-                try { Files.deleteIfExists(p); } catch (Exception ex) { ex.printStackTrace(); }
+                // Java 8: remplacer Path.of par Paths.get
+                Path p = Paths.get(System.getProperty("user.dir"), imagePath);
+                try { Files.deleteIfExists(p); } catch (IOException ex) { ex.printStackTrace(); }
             }
             return ok;
         }
     }
 
-
-    // Mettre à jour un article////////////////////////////////////////////////////////////////////////
     public boolean updateArticle(Article article) throws SQLException {
         String sql = "UPDATE Article SET titre=?, description=?, prix=?, prix_promo=?, reduction=?, categorie=?, etat=?, image=?, " +
                 "marque=?, modele=?, annee=?, kilometrage=?, transmission=?, carburant=?, puissance=?, couleur=? " +
